--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ body {
 
 .home-top {
     margin: 0 auto;
-    padding: 0 80px;
+    padding: 0 160px;
     max-height: 119px;
 }
 
@@ -98,6 +98,10 @@ body {
     cursor: pointer;
 }
 
+.home-line {
+    width: 100%;
+}
+
 .line {
     height: 2px;
     background-color: var(--secondary-color);
@@ -117,7 +121,7 @@ body {
 }
 
 .home-content .home-container {
-    padding: 0 80px;
+    padding: 0 160px;
     gap: 28px;
     position: relative;
 }
@@ -164,7 +168,7 @@ body {
 
 .about {
     background-color: var(--secondary-color);
-    padding: 258px 80px 0px;
+    padding: 258px 160px 0px;
 }
 
 .about-header {
@@ -228,7 +232,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 120px 80px 60px;
+    padding: 120px 160px 60px;
 }
 
 .project-heading {
@@ -244,6 +248,10 @@ body {
 
 .project-detail {
     position: relative;
+}
+
+.project-detail img {
+    width: 100%;
 }
 
 .project-content {
@@ -308,7 +316,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 160px 80px 0;
+    padding: 160px 160px 0;
     gap: 140px;
 }
 
@@ -345,7 +353,7 @@ body {
 .blog {
     background-color: var(--secondary-color);
     color: var(--primary-color);
-    padding: 180px 80px;
+    padding: 180px 160px;
 }
 
 .blog-header {
@@ -409,7 +417,7 @@ body {
 footer {
     background-color: var(--primary-color);
     color: var(--secondary-color);
-    padding: 87px 80px 36px;
+    padding: 87px 160px 36px;
 }
 
 .footer-move {
